--- a/HamburguesasEnElMundo/Base.lproj/Main.storyboard
+++ b/HamburguesasEnElMundo/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="HamburguesasEnElMundo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,8 +17,64 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tipo De Hamburguesa" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b8J-Sq-Kan">
+                                <rect key="frame" x="214" y="121" width="172" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="País" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ku-Ai-Qg3">
+                                <rect key="frame" x="214" y="272" width="172" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IZ8-wY-pew">
+                                <rect key="frame" x="214" y="411" width="172" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Pulsame">
+                                    <color key="titleColor" red="0.96046560402684567" green="0.81934249161073824" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="Pulsa:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wHg-gf-O3a"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" red="0.60759228187919467" green="0.62384647651006708" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" red="0.60759228187919467" green="0.62384647651006708" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="IZ8-wY-pew" firstAttribute="centerX" secondItem="b8J-Sq-Kan" secondAttribute="centerX" id="3gA-4l-rza"/>
+                            <constraint firstItem="IZ8-wY-pew" firstAttribute="width" secondItem="b8J-Sq-Kan" secondAttribute="width" id="Jpc-jU-ARA"/>
+                            <constraint firstItem="b8J-Sq-Kan" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LM0-cC-EPJ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="IZ8-wY-pew" secondAttribute="bottom" constant="159" id="LtT-sK-BZf"/>
+                            <constraint firstItem="6Ku-Ai-Qg3" firstAttribute="top" secondItem="b8J-Sq-Kan" secondAttribute="bottom" constant="38" id="PxZ-Pe-TrA"/>
+                            <constraint firstItem="6Ku-Ai-Qg3" firstAttribute="width" secondItem="b8J-Sq-Kan" secondAttribute="width" id="SEj-TV-Xat"/>
+                            <constraint firstItem="IZ8-wY-pew" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Zhu-v2-sgW"/>
+                            <constraint firstItem="6Ku-Ai-Qg3" firstAttribute="width" secondItem="b8J-Sq-Kan" secondAttribute="height" multiplier="172:21" id="eEM-qy-Iaq"/>
+                            <constraint firstItem="IZ8-wY-pew" firstAttribute="centerY" secondItem="b8J-Sq-Kan" secondAttribute="centerY" id="f8g-wv-Lun"/>
+                            <constraint firstItem="b8J-Sq-Kan" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="101" id="gga-8W-WH8"/>
+                            <constraint firstItem="6Ku-Ai-Qg3" firstAttribute="centerX" secondItem="b8J-Sq-Kan" secondAttribute="centerX" id="kCa-TY-oOi"/>
+                            <constraint firstItem="6Ku-Ai-Qg3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kwL-1Z-HdV"/>
+                            <constraint firstItem="6Ku-Ai-Qg3" firstAttribute="centerY" secondItem="b8J-Sq-Kan" secondAttribute="centerY" id="wMT-mA-yqf"/>
+                            <constraint firstItem="6Ku-Ai-Qg3" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="272" id="yJ5-5u-tRU"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="PxZ-Pe-TrA"/>
+                                <exclude reference="wMT-mA-yqf"/>
+                                <exclude reference="f8g-wv-Lun"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="MuestraPais" destination="6Ku-Ai-Qg3" id="I4s-pe-iU0"/>
+                        <outlet property="TipoHamburguesa" destination="b8J-Sq-Kan" id="iWl-FV-RnB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
